examples/errors/parsing/arithmetic-no-let.cn
main : () [impure] =
  x = 1;
  ()
